Setting up theme

--- a/components/sass/_layout.scss
+++ b/components/sass/_layout.scss
@@ -1,5 +1,20 @@
 
 
-.brand{
-	border: 10px solid red;   
+  
+
+          
+
+
+
+#main-header{ 
 }
+
+
+
+
+
+.brand{
+	//border: 10px solid red;   
+}
+
+
