First case scenario: Each row becomes a table

--- a/components/sass/_base.scss
+++ b/components/sass/_base.scss
@@ -5,5 +5,35 @@ body{
 	@media screen and (min-width: $screen-sm-min){ }   
 }
 
+
+
+
+.highlight{
+	color: red;    
+}
+
  
   
+/*
+	Generic tables styling for desktops and laptops
+*/
+table { 
+  width: 100%; 
+  border-collapse: collapse; 
+}
+/* Zebra striping */
+tr:nth-of-type(odd) { 
+  background: #eee; 
+}
+th { 
+  background: #333; 
+  color: white; 
+  font-weight: bold; 
+}
+td, th { 
+  padding: 6px; 
+  border: 1px solid #ccc; 
+  text-align: left; 
+}
+
+
