--- a/components/sass/styles.scss
+++ b/components/sass/styles.scss
@@ -19,7 +19,8 @@
   
 //Core partials 
 @import 'mixins/eric-njanga-git-theme';
-@import 'base';
-@import 'layout';
+@import 'base';    
+@import 'state';    
+@import 'layout';  
  
   
